@@ -2,6 +2,10 @@ Revision history for Data-Password-Common
 
 {{$NEXT}}
 
+  [ADDED]
+
+  - Allows specifying a custom password list
+
 0.001     2012-12-05 12:58:56 America/New_York
 
   - First release
